Enhance peers list functionality by sending device type in request from web client and updating sendPeersList to handle device-specific logic.

--- a/test.html
+++ b/test.html
@@ -43,6 +43,13 @@
               document.getElementById("status").textContent =
                 "Status: Connected";
               document.getElementById("disconnectButton").disabled = false;
+
+              socket.send(
+                JSON.stringify({
+                  type: "requestPeersList",
+                  device: "web-client",
+                })
+              );
             };
 
             socket.onmessage = (event) => {
