feat: Implement login and registration forms with dynamic visibility; add hero section typewriter effect

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,6 +12,8 @@
     />
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/style.css" />
+
+    <script src="js/hero.js" defer></script>
   </head>
   <body>
     <header>
@@ -19,8 +21,8 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
       </nav>
