--- a/src/public/login.html
+++ b/src/public/login.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main>
-      <form class="login-form auth-form" action="/login" method="POST">
+      <form class="login-form auth-form">
         <h2>Login to TriloCoin</h2>
         <div class="form-group">
           <label for="username">Username</label>
@@ -35,7 +35,7 @@
         <p class="error-message" id="error-message"></p>
       </form>
 
-      <form class="register-form auth-form" action="/register" method="POST">
+      <form class="register-form auth-form">
         <h2>Register for TriloCoin</h2>
         <div class="form-group">
           <label for="username">Username</label>
@@ -46,8 +46,14 @@
           <input type="email" id="email" name="email" required />
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
+          <label for="password">Password (8 characters minimum)</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            required
+            minlength="8"
+          />
         </div>
         <button type="submit" class="button">Sign Up</button>
 
