feat: Implement JWT authentication and user role management; add token verification middleware and update user schema

--- a/src/public/login.html
+++ b/src/public/login.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/style.css" />
 
+    <script src="js/userSession.js" defer></script>
     <script src="js/authentication.js" defer></script>
   </head>
   <body>
