feat: Implement wallet functionality; add key generation and address retrieval for user registration and login

--- a/src/public/home.html
+++ b/src/public/home.html
@@ -54,7 +54,9 @@
             <div class="left">
               <h2><span id="wallet-balance-username"></span> Wallet</h2>
               <div class="wallet-address" id="wallet-address">
-                <span>0x1234567890abcdef1234567890abcdef12345678</span>
+                <span class="wallet-address-span"
+                  >0x1234567890abcdef1234567890abcdef12345678</span
+                >
               </div>
               <div class="wallet-balance" id="wallet-balance">
                 <span class="amount">0.00</span>
