--- a/src/public/home.html
+++ b/src/public/home.html
@@ -21,7 +21,7 @@
       <h2>TriloCoin</h2>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
           <li class="profile">
