feat: Enhance blockchain functionality; implement mining process, transaction pool management, and WebSocket integration for peer communication.

--- a/src/public/home.html
+++ b/src/public/home.html
@@ -15,6 +15,7 @@
 
     <script src="js/userSession.js" defer></script>
     <script src="js/home.js" defer></script>
+    <script src="js/blockchain.js" defer></script>
   </head>
   <body>
     <header>
@@ -96,7 +97,7 @@
               </div>
             </div>
             <div class="right">
-              <button class="button" id="all-blocks-button">
+              <button class="button mine-button" id="all-blocks-button">
                 <div class="svg-container">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -165,5 +166,8 @@
         </div>
       </div>
     </main>
+    <footer>
+      <span class="footer-text"> </span>
+    </footer>
   </body>
 </html>
