--- a/src/public/home.html
+++ b/src/public/home.html
@@ -59,10 +59,7 @@
                   >0x1234567890abcdef1234567890abcdef12345678</span
                 >
               </div>
-              <div class="wallet-balance" id="wallet-balance">
-                <span class="amount">0.00</span>
-                <span class="currency">TRC</span>
-              </div>
+              <div class="wallet-balance" id="wallet-balance">0.00 TRC</div>
               <h3>Current balance</h3>
 
               <div class="wallet-actions">
@@ -163,6 +160,44 @@
               </tr>
             </tbody>
           </table>
+        </div>
+      </div>
+
+      <div class="deposit-container top-container hidden">
+        <div class="glass-container">
+          <h2>Deposit TRC</h2>
+          <p>
+            Available to deposit:
+            <span class="available-deposit-amount">0.00 TRC</span>
+          </p>
+          <form id="deposit-form">
+            <label for="deposit-amount">Amount:</label>
+            <input
+              type="number"
+              id="deposit-amount"
+              name="deposit-amount"
+              required
+            />
+            <button type="submit" class="button">Deposit</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="send-container top-container hidden">
+        <div class="glass-container">
+          <h2>Send TRC</h2>
+          <form id="send-form">
+            <label for="send-amount">Amount:</label>
+            <input type="number" id="send-amount" name="send-amount" required />
+            <label for="recipient-address">Recipient Address:</label>
+            <input
+              type="text"
+              id="recipient-address"
+              name="recipient-address"
+              required
+            />
+            <button type="submit" class="button">Send</button>
+          </form>
         </div>
       </div>
     </main>
