feat: Refactor blockchain data structure; remove outdated blockchain files, enhance transaction handling, and improve transaction display in UI.

--- a/src/public/home.html
+++ b/src/public/home.html
@@ -123,20 +123,16 @@
             <table id="transactions-table">
               <thead>
                 <tr>
-                  <th>Trilo</th>
-                  <th>Sender</th>
-                  <th>Receiver</th>
+                  <th>From</th>
+                  <th>To</th>
+                  <th>Amount</th>
+                  <th>Message</th>
                   <th>Date</th>
+                  <th>State</th>
                 </tr>
               </thead>
               <tbody id="transactions-body">
                 <!-- Transactions will be dynamically inserted here -->
-
-                <tr>
-                  <td colspan="4" class="no-transactions">
-                    No transactions available.
-                  </td>
-                </tr>
               </tbody>
             </table>
           </div>
