--- a/src/public/home.html
+++ b/src/public/home.html
@@ -50,7 +50,7 @@
     </header>
     <main>
       <div class="home-container">
-        <div class="balance-transactions-container">
+        <div class="balance-blocks-container">
           <div class="wallet-balance-container glass-container">
             <div class="left">
               <h2><span id="wallet-balance-username"></span> Wallet</h2>
@@ -117,43 +117,26 @@
               </button>
             </div>
           </div>
-
-          <div class="transactions-container glass-container">
-            <h2>All Transactions</h2>
-            <table id="transactions-table">
-              <thead>
-                <tr>
-                  <th>From</th>
-                  <th>To</th>
-                  <th>Amount</th>
-                  <th>Message</th>
-                  <th>Date</th>
-                  <th>State</th>
-                </tr>
-              </thead>
-              <tbody id="transactions-body">
-                <!-- Transactions will be dynamically inserted here -->
-              </tbody>
-            </table>
+          <div class="blocks-container glass-container">
+            <h2>All Blocks</h2>
+            <div id="blocks-list"></div>
           </div>
         </div>
-        <div class="blocks-container glass-container">
-          <h2>All Blocks</h2>
-          <table id="blocks-table">
+        <div class="transactions-container glass-container">
+          <h2>All Transactions</h2>
+          <table id="transactions-table">
             <thead>
               <tr>
-                <th>Block Number</th>
-                <th>Hash</th>
-                <th>Previous Hash</th>
-                <th>Timestamp</th>
+                <th>From</th>
+                <th>To</th>
+                <th>Amount</th>
+                <th>Message</th>
+                <th>Date</th>
+                <th>State</th>
               </tr>
             </thead>
-            <tbody id="blocks-body">
-              <!-- Blocks will be dynamically inserted here -->
-
-              <tr>
-                <td colspan="4" class="no-blocks">No blocks available.</td>
-              </tr>
+            <tbody id="transactions-body">
+              <!-- Transactions will be dynamically inserted here -->
             </tbody>
           </table>
         </div>
@@ -194,6 +177,20 @@
             />
             <button type="submit" class="button">Send</button>
           </form>
+        </div>
+      </div>
+      <div class="block-details-container top-container hidden">
+        <div class="glass-container block-details">
+          <h2>Block Details</h2>
+          <div class="block-details-content">
+            <p><strong>Block Hash:</strong> <span id="block-hash"></span></p>
+            <p><strong>Previous Hash:</strong> <span id="prev-hash"></span></p>
+            <p><strong>Timestamp:</strong> <span id="timestamp"></span></p>
+            <p><strong>Nonce:</strong> <span id="nonce"></span></p>
+            <p><strong>Transactions:</strong></p>
+            <ul id="block-transactions-list"></ul>
+          </div>
+          <button class="button" id="close-block-details">Close</button>
         </div>
       </div>
     </main>
